--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ services:
 before_install:
 - |
   docker run -d -p 4001:4001 -p 2380:2380 \
-    quay.io/coreos/etcd \
+    quay.io/coreos/etcd:v2.3.7 \
     --listen-client-urls=http://0.0.0.0:4001 \
     --advertise-client-urls=http://127.0.0.1:4001 \
     --listen-peer-urls=http://0.0.0.0:2380
