--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ services:
 - docker
 before_install:
 - |
-  docker run -d -p 4001:4001 -p 2380:2380 \
+  docker run -d --name=etcd \
+    -p 4001:4001 -p 2380:2380 \
     quay.io/coreos/etcd:v2.3.7 \
     --listen-client-urls=http://0.0.0.0:4001 \
     --advertise-client-urls=http://127.0.0.1:4001 \
