--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
 sudo: required
+services:
+- docker
 python:
 - 2.7
 - 3.3
@@ -7,20 +9,38 @@ python:
 - 3.5
 - pypy
 - pypy3
-services:
-- docker
+env:
+  matrix:
+  - ETCD_VERSION=2.3.7
+  - ETCD_VERSION=3.2.8
+
 before_install:
 - |
-  docker run -d --name=etcd \
-    -p 2379:2379 -p 2380:2380 \
-    quay.io/coreos/etcd:v2.3.7 \
-    --listen-client-urls=http://0.0.0.0:2379 \
-    --advertise-client-urls=http://127.0.0.1:2379 \
+  # etcd3 Docker image requires an explicit command, while etcd2 doesn't.
+  if [[ "$ETCD_VERSION" = 2.* ]]; then
+    readonly etcd_cmd=()
+  else
+    readonly etcd_cmd=(/usr/local/bin/etcd)
+  fi
+
+  # These options are common among etcd3 and etcd2.
+  readonly etcd_opts=(
+    --initial-advertise-peer-urls=http://127.0.0.1:2380
     --listen-peer-urls=http://0.0.0.0:2380
+    --advertise-client-urls=http://127.0.0.1:2379
+    --listen-client-urls=http://0.0.0.0:2379
+    --initial-cluster=default=http://127.0.0.1:2380
+  )
+
+  docker run -d --name=etcd -p 2379:2379 -p 2380:2380 \
+    quay.io/coreos/etcd:v"$ETCD_VERSION" "$etcd_cmd[@]" "$etcd_opts[@]"
+
 install:
 - pip install -e .
 - pip install coveralls
+
 script:
 - coverage run --source=etc setup.py test
+
 after_success:
 - coveralls
