--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_install:
   )
 
   docker run -d --name=etcd -p 2379:2379 -p 2380:2380 \
-    quay.io/coreos/etcd:v"$ETCD_VERSION" "$etcd_cmd[@]" "$etcd_opts[@]"
+    quay.io/coreos/etcd:v"$ETCD_VERSION" "${etcd_cmd[@]}" "${etcd_opts[@]}"
 
 install:
 - pip install -e .
